fix(arc-244): add new scroll to top fix to prevent jumping on scroll lock

--- a/src/styles/base/_root.scss
+++ b/src/styles/base/_root.scss
@@ -9,6 +9,7 @@
 body {
 	min-height: 100vh;
 	margin: 0;
+	overflow-x: hidden;
 	font-family: $font-family-primary;
 	font-size: $font-size-base;
 	line-height: $line-height-lg;
